# slr-tdd-anti-patterns-test-smells

./: .gitignore  README.md  merge.py  parse_to_csv.py  parsed-google-scholar-to-csv.csv  pyproject.toml  read.py  scholar-search.py
database/: merged.csv  scholar.csv  scopus.csv  wos.csv  wos.xls
raw-analysis/: query_strings.txt
raw-result-from-google-scholar/: 30-years-of-software-refactoring-research-a-systematic-literature-review.json  a-catalogue-of-agile-smells-for-agility-assessment.json  a-conceptual-model-for-ontology-quality-assessment.json  a-framework-for-service-oriented-extensions-to-ruby-on-rails.json  a-gqm-approach-to-evaluation-of-the-quality-of-smartthings-applications-using-static-analysis.json  a-grounded-theory-of-organizational-structures-for-development-and-infrastructure-professionals-in-software-producing-organizations.json  a-guide-to-selecting-software-measures-and-metrics.json  a-hacker-s-guide-to-project-management.json  a-javascript-api-for-accessing-semantic-web.json  a-jenkins-koji-integration-plugin.json  a-large-empirical-study-on-blob-blueprint-in-technology-agnostic-infrastructure-code.json  a-learning-based-module-extraction-method-for-object-oriented-systems.json  a-literature-review-on-performance-of-enterprise-software-systems-at-the-international-conference-on-performance-engineering-icpe.json  a-multi-objective-architecture-reconstruction-approach.json  a-multitasking-and-data-driven-architecture-for-multi-agents-simulations.json  a-pattern-enforcing-compiler-pec-for-java-a-practical-way-to-formally-specify-patterns.json  (+450 more)
(+493 files in other folders)
