[tool.poetry]
name = "slr-tdd-anti-patterns"
version = "0.1.0"
description = ""
authors = ["Matheus Marabesi <matheus.marabesi@gmail.com>"]
readme = "README.md"
packages = [{include = "slr_tdd_anti_patterns"}]

[tool.poetry.dependencies]
python = "^3.11"
scholarly = "^1.7.11"
python-slugify = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
